fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,12 @@
 }
 
 .canvas {
+  position: relative;
   border-radius: 0.5rem;
   width: inherit;
   height: 80vh;
   background-color: #020202;
+  overflow: hidden;
 }
 
 .menu {
